# goblin-mob-boss

./: .gitignore  ART_ASSETS.md  CLAUDE.md  CONTRIBUTING.md  EVALUATION.md  LICENSE  PLAN.md  README.md  index.html  package-lock.json  package.json  plan.md  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml  tests.yml
backend/: Cargo.toml  tauri.conf.json
backend/capabilities/: default.json
backend/icons/: icon.icns
backend/src/: analytics.rs  claude_md.rs  commands.rs  context.rs  functional_testing.rs  git.rs  guidance.rs  harness.rs  heuristics.rs  launch.rs  lib.rs  models.rs  observer.rs  prompts.rs  pty.rs  store.rs  templates.rs  validators.rs
frontend/: App.test.tsx  App.tsx  main.tsx  styles.css
frontend/components/: ActivityLog.test.tsx  ActivityLog.tsx  AddRepoModal.test.tsx  AddRepoModal.tsx  AgentPerformance.test.tsx  AgentPerformance.tsx  ClauseOutput.test.tsx  ClauseOutput.tsx  CommandDisplay.test.tsx  CommandDisplay.tsx  ContextualHelp.test.tsx  ContextualHelp.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  HooksEditor.test.tsx  HooksEditor.tsx  PersistentTerminal.test.tsx  PersistentTerminal.tsx  StatusBadge.test.tsx  StatusBadge.tsx  Terminal.test.tsx  Terminal.tsx  ToastContainer.test.tsx  ToastContainer.tsx
frontend/hooks/: useBackgroundPlanning.test.tsx  useBackgroundPlanning.tsx  useTauri.test.ts  useTauri.ts  useTerminalSession.tsx  useToast.test.tsx  useToast.tsx
frontend/pages/: AgentsPage.test.tsx  AgentsPage.tsx  GuidePage.tsx  (+21 more)
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
(+21 files in other folders)
